--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
     <meta name="description" content="Family tree" />
     <title>Family Tree</title>
+
+    <script src="./index.js"></script>
 </head>
 <body>
+    <div>
+        Hello World
+    </div>
 </body>
 </html>
