--- a/index.html
+++ b/index.html
@@ -457,56 +457,15 @@
                     $(go.Shape, { strokeWidth: 2.5, stroke: "#5d8cc1" /* blue */ })
                 ));
 
-            // n: name, s: sex, m: mother, f: father, ux: wife, vir: husband, a: attributes/markers
-
             setupDiagram(myDiagram, [
-                { key: 0, n: "Aaron", s: "M", m: -10, f: -11, ux: 1, a: ["C", "F", "K"] },
-                { key: 1, n: "Alice", s: "F", m: -12, f: -13, a: ["B", "H", "K"] },
-                { key: 2, n: "Bob", s: "M", m: 1, f: 0, ux: 3, a: ["C", "H", "L"] },
-                { key: 3, n: "Barbara", s: "F", a: ["C"] },
-                { key: 4, n: "Bill", s: "M", m: 1, f: 0, ux: 5, a: ["E", "H"] },
-                { key: 5, n: "Brooke", s: "F", a: ["B", "H", "L"] },
-                { key: 6, n: "Claire", s: "F", m: 1, f: 0, a: ["C"] },
-                { key: 7, n: "Carol", s: "F", m: 1, f: 0, a: ["C", "I"] },
-                { key: 8, n: "Chloe", s: "F", m: 1, f: 0, vir: 9, a: ["E"] },
-                { key: 9, n: "Chris", s: "M", a: ["B", "H"] },
-                { key: 10, n: "Ellie", s: "F", m: 3, f: 2, a: ["E", "G"] },
-                { key: 11, n: "Dan", s: "M", m: 3, f: 2, a: ["B", "J"] },
-                { key: 12, n: "Elizabeth", s: "F", vir: 13, a: ["J"] },
-                { key: 13, n: "David", s: "M", m: 5, f: 4, a: ["B", "H"] },
-                { key: 14, n: "Emma", s: "F", m: 5, f: 4, a: ["E", "G"] },
-                { key: 15, n: "Evan", s: "M", m: 8, f: 9, a: ["F", "H"] },
-                { key: 16, n: "Ethan", s: "M", m: 8, f: 9, a: ["D", "K"] },
-                { key: 17, n: "Eve", s: "F", vir: 16, a: ["B", "F", "L"] },
-                { key: 18, n: "Emily", s: "F", m: 8, f: 9 },
-                { key: 19, n: "Fred", s: "M", m: 17, f: 16, a: ["B"] },
-                { key: 20, n: "Faith", s: "F", m: 17, f: 16, a: ["L"] },
-                { key: 21, n: "Felicia", s: "F", m: 12, f: 13, a: ["H"] },
-                { key: 22, n: "Frank", s: "M", m: 12, f: 13, a: ["B", "H"] },
-
-                // "Aaron"'s ancestors
-                { key: -10, n: "Paternal Grandfather", s: "M", m: -33, f: -32, ux: -11, a: ["A", "S"] },
-                { key: -11, n: "Paternal Grandmother", s: "F", a: ["E", "S"] },
-                { key: -32, n: "Paternal Great", s: "M", ux: -33, a: ["F", "H", "S"] },
-                { key: -33, n: "Paternal Great", s: "F", a: ["S"] },
-                { key: -40, n: "Great Uncle", s: "M", m: -33, f: -32, a: ["F", "H", "S"] },
-                { key: -41, n: "Great Aunt", s: "F", m: -33, f: -32, a: ["B", "I", "S"] },
-                { key: -20, n: "Uncle", s: "M", m: -11, f: -10, a: ["A", "S"] },
-
-                // "Alice"'s ancestors
-                { key: -12, n: "Maternal Grandfather", s: "M", ux: -13, a: ["D", "L", "S"] },
-                { key: -13, n: "Maternal Grandmother", s: "F", m: -31, f: -30, a: ["H", "S"] },
-                { key: -21, n: "Aunt", s: "F", m: -13, f: -12, a: ["C", "I"] },
-                { key: -22, n: "Uncle", s: "M", ux: -21 },
-                { key: -23, n: "Cousin", s: "M", m: -21, f: -22 },
-                { key: -30, n: "Maternal Great", s: "M", ux: -31, a: ["D", "J", "S"] },
-                { key: -31, n: "Maternal Great", s: "F", m: -50, f: -51, a: ["B", "H", "L", "S"] },
-                { key: -42, n: "Great Uncle", s: "M", m: -30, f: -31, a: ["C", "J", "S"] },
-                { key: -43, n: "Great Aunt", s: "F", m: -30, f: -31, a: ["E", "G", "S"] },
-                { key: -50, n: "Maternal Great Great", s: "F", vir: -51, a: ["D", "I", "S"] },
-                { key: -51, n: "Maternal Great Great", s: "M", a: ["B", "H", "S"] }
+                { key: 0, n: "李聿軒", title: "我", sex: "M", mother: 3, father: 4, a: [] },
+                { key: 1, n: "李聿Hao", title: "哥哥", sex: "M", mother: 3, father: 4, wife: 2, a: [] },
+                { key: 2, n: "Hao Chang", title: "嫂子", sex: "F", husband: 2, a: [] },
+                { key: 3, n: "Mother", title: "媽媽", sex: "F", husband: 4, a: [] },
+                { key: 4, n: "Father", title: "爸爸", sex: "M", mother: 1, father: 0, wife: 3, a: [] },
+                { key: 4, n: "Azalea", title: "姪女", sex: "F", mother: 2, father: 1, a: [] },
             ],
-                4 /* focus on this person */);
+                0 /* focus on this person */);
         }
 
 
@@ -517,7 +476,7 @@
                     { // declare support for link label nodes
                         linkLabelKeysProperty: "labelKeys",
                         // this property determines which template is used
-                        nodeCategoryProperty: "s",
+                        nodeCategoryProperty: "sex",
                         // if a node data object is copied, copy its data.a Array
                         copiesArrays: true,
                         // create all of the nodes for people
@@ -551,20 +510,20 @@
             for (let i = 0; i < nodeDataArray.length; i++) {
                 const data = nodeDataArray[i];
                 const key = data.key;
-                let uxs = data.ux;
-                if (uxs !== undefined) {
-                    if (typeof uxs === "number") uxs = [uxs];
-                    for (let j = 0; j < uxs.length; j++) {
-                        const wife = uxs[j];
+                let wives = data.wife;
+                if (wives !== undefined) {
+                    if (typeof wives === "number") wives = [wives];
+                    for (let j = 0; j < wives.length; j++) {
+                        const wife = wives[j];
                         const wdata = model.findNodeDataForKey(wife);
-                        if (key === wife || !wdata || wdata.s !== "F") {
+                        if (key === wife || !wdata || wdata.sex !== "F") {
                             console.log("cannot create Marriage relationship with self or unknown person " + wife);
                             continue;
                         }
                         const link = findMarriage(diagram, key, wife);
                         if (link === null) {
                             // add a label node for the marriage link
-                            const mlab = { s: "LinkLabel" };
+                            const mlab = { sex: "LinkLabel" };
                             model.addNodeData(mlab);
                             // add the marriage link itself, also referring to the label node
                             const mdata = { from: key, to: wife, labelKeys: [mlab.key], category: "Marriage" };
@@ -572,20 +531,20 @@
                         }
                     }
                 }
-                let virs = data.vir;
-                if (virs !== undefined) {
-                    if (typeof virs === "number") virs = [virs];
-                    for (let j = 0; j < virs.length; j++) {
-                        const husband = virs[j];
+                let husbands = data.husband;
+                if (husbands !== undefined) {
+                    if (typeof husbands === "number") husbands = [husbands];
+                    for (let j = 0; j < husbands.length; j++) {
+                        const husband = husbands[j];
                         const hdata = model.findNodeDataForKey(husband);
-                        if (key === husband || !hdata || hdata.s !== "M") {
+                        if (key === husband || !hdata || hdata.sex !== "M") {
                             console.log("cannot create Marriage relationship with self or unknown person " + husband);
                             continue;
                         }
                         const link = findMarriage(diagram, key, husband);
                         if (link === null) {
                             // add a label node for the marriage link
-                            const mlab = { s: "LinkLabel" };
+                            const mlab = { sex: "LinkLabel" };
                             model.addNodeData(mlab);
                             // add the marriage link itself, also referring to the label node
                             const mdata = { from: key, to: husband, labelKeys: [mlab.key], category: "Marriage" };
@@ -603,8 +562,8 @@
             for (let i = 0; i < nodeDataArray.length; i++) {
                 const data = nodeDataArray[i];
                 const key = data.key;
-                const mother = data.m;
-                const father = data.f;
+                const mother = data.mother;
+                const father = data.father;
                 if (mother !== undefined && father !== undefined) {
                     const link = findMarriage(diagram, mother, father);
                     if (link === null) {
